# ShangHai

./: CMakeLists.txt  Note.txt  Readme.md  a.out  bigGraph.txt  classical.cu  clsReader.cu  consolidate.cu  fiveCycleSim.txt  graph.txt  实验数据报告和基本思想·.md
WIPdir/: medieval.cu  medievalReader.cu
example/: BasicModel.cu  CMakeLists.txt  Combined.cu  CrazyStream.cu  FancyStream.cu  MoreFancy.cu  StreamCompared.cu  StreamModul.cu  test.cu
example/graph/: graph.txt  halfAdd.txt  smallgraph.txt
history/: bronzeage.cu  ironage.cu  seapeoples.cu  stoneage.cu
history/prehistory/: protopar.cu  protoseq.cpp
misc/cudaInfo/: devprops.txt  properties.cu
misc/cudaTest/: a.out  example.cu  oldprotopar.cu  testStruct.cu  vectortest.cu
misc/exmpls/: examp_structStar.cu  structStarStar.cu
misc/pkgs/.svn/: all-wcprops  entries
misc/pkgs/GL/.svn/: all-wcprops  entries
picture/: Draw1.py  Draw2.py  Draw3.py
pythonTest/: ProduceData.py  encoding.py  test_bench.pt
src/: CMakeLists.txt  FancyDesign.cu  FancyDesign.cuh  GancyDesign.cu  GancyDesign.cuh  HelpFunction.cu  HelpFunction.cuh  Kernel.cu  Kernel.cuh  consolidate.cu  consolidate.cuh  type.cuh
txts/: documentation.txt  printfs.txt  simPacks.txt
